# ezlog

./: .gitignore  LICENSE  README.md  pyproject.toml
ezlog/: __init__.py  core.py
