[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezlog"
version = "0.1.0"
description = "A simple one-line setup wrapper for Python logging module"
readme = "README.md"
authors = [{ name = "Fakhrul Nurmulyana"}]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
